# markdown-pdf

./: .flake8  Makefile  README.md  main.py  pyproject.toml  test.md  test.py
docs/: interface.md  interface.tldr
src/backend/: __init__.py  conversor.py  conversor1.py
src/backend/styles/: default.py
src/frontend/: __init__.py
src/frontend/components/: __init__.py  alert.py  input.py
src/frontend/components/buttons/: convert_doc.py  search_files.py
src/frontend/pages/: __init__.py  home.py
src/frontend/styles/: __init__.py  text.py
